@@ -2,12 +2,11 @@ package co.nvqa.operator_v2.selenium.page;
 
 import co.nvqa.common.model.DataEntity;
 import co.nvqa.operator_v2.cucumber.ScenarioStorageKeys;
+import co.nvqa.operator_v2.selenium.elements.Button;
+import co.nvqa.operator_v2.selenium.elements.PageElement;
 import co.nvqa.operator_v2.selenium.elements.TextBox;
-import co.nvqa.operator_v2.selenium.elements.md.MdDialog;
-import co.nvqa.operator_v2.selenium.elements.nv.NvApiTextButton;
-import co.nvqa.operator_v2.selenium.elements.nv.NvFilterBox;
-import co.nvqa.operator_v2.selenium.elements.nv.NvFilterDateBox;
-import co.nvqa.operator_v2.selenium.elements.nv.NvIconTextButton;
+import co.nvqa.operator_v2.selenium.elements.ant.AntModal;
+import co.nvqa.operator_v2.selenium.elements.ant.AntSelect3;
 import com.google.common.collect.ImmutableMap;
 import java.util.Map;
 import org.assertj.core.api.Assertions;
@@ -24,71 +23,71 @@ import static co.nvqa.operator_v2.selenium.page.OutboundMonitoringPage.RoutesTab
  * @author Tristania Siagian
  */
 @SuppressWarnings("WeakerAccess")
-public class OutboundMonitoringPage extends OperatorV2SimplePage implements ScenarioStorageKeys {
+public class OutboundMonitoringPage extends SimpleReactPage<OutboundMonitoringPage> implements
+    ScenarioStorageKeys {
 
-  public OutboundBreakroutePage outboundBreakroutePage;
   public OutboundBreakrouteV2Page outboundBreakrouteV2Page;
 
   public RoutesTable routesTable;
 
-  @FindBy(tagName = "md-dialog")
+  @FindBy(css = ".ant-modal")
   public PutCommentsModal putCommentsModal;
 
-  @FindBy(xpath = "//nv-filter-date-box[.//p[.='Date']]")
-  public NvFilterDateBox dateFilter;
+  @FindBy(css = "[placeholder='Select date']")
+  public PageElement dateFilter;
 
-  @FindBy(css = "nv-filter-box[item-types='Hubs Select']")
-  public NvFilterBox hubsSelect;
+  @FindBy(css = "[data-testid='hubIds.hubIds']")
+  public AntSelect3 hubsSelect;
 
-  @FindBy(css = "nv-filter-box[item-types='Zones Select']")
-  public NvFilterBox zonesSelect;
+  @FindBy(css = "[data-testid='zoneIds.zoneIds']")
+  public AntSelect3 zonesSelect;
 
-  @FindBy(name = "Load Selection")
-  public NvApiTextButton loadSelection;
+  @FindBy(css = "[data-testid='outbound-monitoring-filter_load-selection-button']")
+  public Button loadSelection;
 
-  @FindBy(name = "container.outbound-routebreak.pull-out")
-  public NvIconTextButton pullOut;
+  @FindBy(css = "[data-testid='outbound-details_pull-out-button']")
+  public Button pullOut;
 
 
   public OutboundMonitoringPage(WebDriver webDriver) {
     super(webDriver);
-    outboundBreakroutePage = new OutboundBreakroutePage(getWebDriver());
     outboundBreakrouteV2Page = new OutboundBreakrouteV2Page(getWebDriver());
     routesTable = new RoutesTable(webDriver);
   }
 
   public void verifyRouteIdExists(String routeId) {
-   Assertions.assertThat(routesTable.isTableEmpty()).as("Routes table is empty").isFalse();
+    Assertions.assertThat(routesTable.isTableEmpty()).as("Routes table is empty").isFalse();
     String actualRouteId = routesTable.getColumnText(1, COLUMN_ROUTE_ID);
-   Assertions.assertThat(actualRouteId).as("Route ID is not found.").isEqualTo(routeId);
+    Assertions.assertThat(actualRouteId).as("Route ID is not found.").isEqualTo(routeId);
   }
 
   public void verifyStatusInProgress() {
     String actualStatus = routesTable.getColumnText(1, COLUMN_OUTBOUND_STATUS);
-   Assertions.assertThat(actualStatus).as("Route ID is not found.").isEqualTo("In Progress");
+    Assertions.assertThat(actualStatus).as("Route ID is not found.").isEqualTo("In Progress");
   }
 
   public void verifyStatusComplete() {
     String actualStatus = routesTable.getColumnText(1, COLUMN_OUTBOUND_STATUS);
-   Assertions.assertThat(actualStatus).as("Route ID is not found.").isEqualTo("Complete");
+    Assertions.assertThat(actualStatus).as("Route ID is not found.").isEqualTo("Complete");
   }
 
   public void verifyStatusMarked() {
     String actualStatus = routesTable.getColumnText(1, COLUMN_OUTBOUND_STATUS);
-   Assertions.assertThat(actualStatus).as("Route ID is not marked.").isEqualTo("Marked");
+    Assertions.assertThat(actualStatus).as("Route ID is not marked.").isEqualTo("Marked");
   }
 
   public void clickCommentButtonAndSubmit() {
     routesTable.clickActionButton(1, ACTION_COMMENT);
     putCommentsModal.waitUntilVisible();
     putCommentsModal.comments.setValue("This comment is for test purpose.");
-    putCommentsModal.submit.clickAndWaitUntilDone();
+    putCommentsModal.submit.click();
     pause2s();
   }
 
   public void verifyCommentIsRight() {
     String actualComment = routesTable.getColumnText(1, COLUMN_COMMENTS);
-   Assertions.assertThat(actualComment).as("Comment is different.").isEqualTo("This comment is for test purpose.");
+    Assertions.assertThat(actualComment).as("Comment is different.")
+        .isEqualTo("This comment is for test purpose.");
   }
 
   public void searchTableByRouteId(long routeId) {
@@ -96,8 +95,8 @@ public class OutboundMonitoringPage extends OperatorV2SimplePage implements Scen
   }
 
   public void switchToOutboundBreakrouteWindow(long routeId) {
-    switchToOtherWindow("outbound-breakroute/" + routeId);
-    outboundBreakroutePage.waitUntilElementDisplayed();
+    switchToOtherWindow("outbound-breakroute-v2?routeIds=" + routeId);
+    pause5s();
   }
 
   public static class RouteInfo extends DataEntity<RouteInfo> {
@@ -150,7 +149,7 @@ public class OutboundMonitoringPage extends OperatorV2SimplePage implements Scen
   /**
    * Accessor for Routes table
    */
-  public static class RoutesTable extends MdVirtualRepeatTable<RouteInfo> {
+  public static class RoutesTable extends AntTableV2<RouteInfo> {
 
     public static final String COLUMN_ROUTE_ID = "id";
     public static final String COLUMN_OUTBOUND_STATUS = "outboundStatus";
@@ -161,30 +160,36 @@ public class OutboundMonitoringPage extends OperatorV2SimplePage implements Scen
 
     public RoutesTable(WebDriver webDriver) {
       super(webDriver);
-      setMdVirtualRepeat("data in getTableData()");
       setEntityClass(RouteInfo.class);
       setColumnLocators(ImmutableMap.<String, String>builder()
-          .put(COLUMN_ROUTE_ID, "route-id")
-          .put("unscannedInternal", "unscanned-internal")
-          .put(COLUMN_OUTBOUND_STATUS, "outbound-status")
+          .put(COLUMN_ROUTE_ID, "route_id")
+          .put("unscannedInternal", "parcels_not_scanned_in_hub")
+          .put(COLUMN_OUTBOUND_STATUS, "outbound_status")
           .put(COLUMN_COMMENTS, "comments")
           .build()
       );
       setActionButtonsLocators(
-          ImmutableMap.of(ACTION_FLAG, "flag", ACTION_COMMENT, "comment", ACTION_EDIT, "edit"));
+          Map.of(
+              ACTION_FLAG,
+              "//div[@role='row'][%d]//div[@role='gridcell']//button[contains(@data-testid,'flag')]",
+              ACTION_COMMENT,
+              "//div[@role='row'][%d]//div[@role='gridcell']//button[contains(@data-testid,'comment')]",
+              ACTION_EDIT,
+              "//div[@role='row'][%d]//div[@role='gridcell']//button[contains(@data-testid,'edit')]")
+      );
     }
   }
 
-  public static class PutCommentsModal extends MdDialog {
+  public static class PutCommentsModal extends AntModal {
 
     public PutCommentsModal(WebDriver webDriver, WebElement webElement) {
       super(webDriver, webElement);
     }
 
-    @FindBy(css = "[id ^= 'comments']")
+    @FindBy(css = "[data-testid='outbound-monitoring_comments-input']")
     public TextBox comments;
 
-    @FindBy(name = "Submit")
-    public NvApiTextButton submit;
+    @FindBy(css = "[data-testid='edit-comment-submit-button']")
+    public Button submit;
   }
 }
